fix center wrap

--- a/wp-content/themes/gospodar/assets/css/app.css
+++ b/wp-content/themes/gospodar/assets/css/app.css
@@ -1347,7 +1347,6 @@ header .header-inside__part2-cart__text ul li:last-child>span {
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
 	flex-direction: column;
-	margin-right: 15px;
 }
 
 .best-offers__inside-items__item-img,
@@ -2803,15 +2802,17 @@ input[type=radio]:checked+label div {
 		justify-content: flex-start !important;
 	}
 	.best-offers__inside-items {
-		width: 950px;
+		max-width: 945px;
 		margin: 0 auto;
+	}
+	.best-offers__inside-items__item,
+	.catalog-block__inside-items__item {
+		margin-left: 7px;
+		margin-right:7px
 	}
 }
 @media (max-width:1290px) {
-	.best-offers__inside-items__item,
-	.catalog-block__inside-items__item {
-		margin-right: 15px
-	}
+	
 	.best-offers__inside-items {
 		-ms-flex-pack: distribute;
 		justify-content: space-around
@@ -2998,7 +2999,11 @@ input[type=radio]:checked+label div {
 		margin: 0 auto
 	}
 }
-
+@media (max-width:1000px) { 
+	.best-offers__inside-items {
+		max-width: 629px;
+	}
+}
 @media (max-width:980px) {
 	.sale-banner__items {
 		-webkit-box-orient: vertical;
@@ -3100,6 +3105,9 @@ input[type=radio]:checked+label div {
 		width: 100%;
 		flex-direction: column;
 		align-items: center;
+	}
+	.best-offers__inside-items__item {
+		margin-left:0
 	}
 }
 
